XRDDEV-2064 Global group details view implementation (#1288)
