# src/centralserver/admin-service/src/main/java/org/niis/xroad/centralserver/restapi/dto/GlobalGroupUpdateDto.java
@@ -1,5 +1,6 @@
 /**
  * The MIT License
+ *
  * Copyright (c) 2019- Nordic Institute for Interoperability Solutions (NIIS)
  * Copyright (c) 2018 Estonian Information System Authority (RIA),
  * Nordic Institute for Interoperability Solutions (NIIS), Population Register Centre (VRK)
@@ -23,39 +24,14 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-package org.niis.xroad.centralserver.restapi.converter;
+package org.niis.xroad.centralserver.restapi.dto;
 
-import org.junit.jupiter.api.Test;
-import org.niis.xroad.centralserver.openapi.model.GlobalGroupResource;
-import org.niis.xroad.centralserver.restapi.entity.GlobalGroup;
+import lombok.Getter;
+import lombok.RequiredArgsConstructor;
 
-import java.time.ZoneOffset;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-
-class GlobalGroupConverterTest {
-
-    @Test
-    void convert() {
-        GlobalGroup mockEntity = mockEntity();
-        GlobalGroupConverter converter = new GlobalGroupConverter(new GroupMemberConverter());
-
-        GlobalGroupResource result = converter.convert(mockEntity);
-
-        assertEquals(mockEntity.getId(), result.getId());
-        assertEquals(mockEntity.getGroupCode(), result.getCode());
-        assertEquals(mockEntity.getDescription(), result.getDescription());
-        assertEquals(mockEntity.getMemberCount(), result.getMemberCount());
-        assertEquals(0, result.getMembers().size());
-        assertEquals(mockEntity.getCreatedAt().atOffset(ZoneOffset.UTC), result.getCreatedAt());
-        assertEquals(mockEntity.getUpdatedAt().atOffset(ZoneOffset.UTC), result.getUpdatedAt());
-    }
-
-    private GlobalGroup mockEntity() {
-        GlobalGroup globalGroup = new GlobalGroup();
-        globalGroup.setId(1);
-        globalGroup.setGroupCode("code");
-        globalGroup.setDescription("description");
-        return globalGroup;
-    }
+@Getter
+@RequiredArgsConstructor
+public class GlobalGroupUpdateDto {
+    private final Integer groupId;
+    private final String description;
 }
